--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ table th, table td {
     width: 100%;
 }
 
-.servant tr:nth-child(1), .servant tr:nth-child(13), .servant tr:last-child{
+.servant tr:nth-child(1), .servant tr:nth-child(13), .servant tr:nth-child(19), .servant tr:last-child{
     text-align: center;
 }
 
